--- a/a4/mingpt-demo/play_char.ipynb
+++ b/a4/mingpt-demo/play_char.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,11 +311,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# well that was fun\n",
+    "rope_cache = torch.zeros((10, 5, 2))\n",
+    "rope_cache[0,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor((2))\n",
+    "for t in range(10):\n",
+    "    for i in range(5):\n",
+    "        theta = 1/(10000**(-2*(i-1)/10))\n",
+    "        rope_cache[t,i,0] = torch.cos(a)\n",
+    "        rope_cache[t,i,1] = torch.sin(a)\n",
+    "\n",
+    "rope_cache[0,:,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 6])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    \n",
+    "x = torch.tensor(([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8],  # \"I\"\n",
+    "    [0.2, 0.1, 0.4, 0.3, 0.6, 0.5, 0.8, 0.7],  # \"like\"\n",
+    "    [0.3, 0.4, 0.1, 0.2, 0.7, 0.8, 0.5, 0.6],  # \"to\"\n",
+    "    [0.4, 0.3, 0.2, 0.1, 0.8, 0.7, 0.6, 0.5],  # \"play\"\n",
+    "    [0.5, 0.6, 0.7, 0.8, 0.1, 0.2, 0.3, 0.4],  # \"tennis\"\n",
+    "    [0.6, 0.5, 0.8, 0.7, 0.2, 0.1, 0.4, 0.3]))\n",
+    "\n",
+    "x = x.view(1, 2, 6, 4)\n",
+    "x[...,0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]],\n",
+       "\n",
+       "        [[-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161],\n",
+       "         [-0.4161]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rope_cache[...,0::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.731474621539459\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "len_ = random.normalvariate(int(10/4), 1)\n",
+    "print(len_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0.],\n",
+       "        [1., 0.],\n",
+       "        [1., 0.],\n",
+       "        [1., 0.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def precompute_rotary_emb(dim, max_positions):\n",
+    "    \"\"\"\n",
+    "    RoPE uses the following sinusoidal functions to encode positions:\n",
+    "\n",
+    "    cos(t theta_i) and sin(t theta_i)\n",
+    "        where t is the position and\n",
+    "              theta_i = 1/10000^(-2(i-1)/dim) for i in [1, dim/2]\n",
+    "\n",
+    "    Since the maximum length of sequences is known, we can precompute\n",
+    "    these values to speed up training.\n",
+    " \n",
+    "    Implement the precompute_rotary_emb function that returns a tensor of\n",
+    "    shape (max_positions, dim/2, 2) where the last dimension contains\n",
+    "    the cos and sin values for each position and each dimension of\n",
+    "    the embedding.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    rope_cache = None\n",
+    "    # TODO: [part g]\n",
+    "    ### YOUR CODE HERE ###\n",
+    "    rope_cache = torch.zeros((max_positions, dim//2, 2))\n",
+    "\n",
+    "    for t in range(max_positions):\n",
+    "        for i in range(dim//2):\n",
+    "            theta = 1/(10000**(-2*(i-1)/dim))\n",
+    "            cos_t_theta = torch.cos(torch.tensor(t*theta))\n",
+    "            sin_t_theta = torch.sin(torch.tensor(t*theta))\n",
+    "            rope_cache[t,i,0] = cos_t_theta\n",
+    "            rope_cache[t,i,1] = sin_t_theta\n",
+    "    ### END YOUR CODE ###\n",
+    "    return rope_cache\n",
+    "\n",
+    "rope_cache = precompute_rotary_emb(4, 6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.0000,  0.0000],\n",
+       "         [ 1.0000,  0.0000],\n",
+       "         [ 1.0000,  0.0000],\n",
+       "         [ 1.0000,  0.0000]],\n",
+       "\n",
+       "        [[ 0.9950,  0.0998],\n",
+       "         [ 0.5403,  0.8415],\n",
+       "         [-0.8391, -0.5440],\n",
+       "         [ 0.8623, -0.5064]],\n",
+       "\n",
+       "        [[ 0.9801,  0.1987],\n",
+       "         [-0.4161,  0.9093],\n",
+       "         [ 0.4081,  0.9129],\n",
+       "         [ 0.4872, -0.8733]],\n",
+       "\n",
+       "        [[ 0.9553,  0.2955],\n",
+       "         [-0.9900,  0.1411],\n",
+       "         [ 0.1543, -0.9880],\n",
+       "         [-0.0221, -0.9998]],\n",
+       "\n",
+       "        [[ 0.9211,  0.3894],\n",
+       "         [-0.6536, -0.7568],\n",
+       "         [-0.6669,  0.7451],\n",
+       "         [-0.5253, -0.8509]],\n",
+       "\n",
+       "        [[ 0.8776,  0.4794],\n",
+       "         [ 0.2837, -0.9589],\n",
+       "         [ 0.9650, -0.2624],\n",
+       "         [-0.8838, -0.4678]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rope_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# well that was fun"
+    "rope_cache = rope_cache[:6,:,:]\n",
+    "cos_cache = rope_cache[:,:,0]\n",
+    "sin_cache = rope_cache[:,:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 4])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_cache.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand((1, 2, 6, 4))\n",
+    "k = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_1, k2 = k[...,0:2], k[...,1:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (2) must match the size of tensor b (4) at non-singleton dimension 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m k_1 \u001b[38;5;241m*\u001b[39m cos_cache\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (2) must match the size of tensor b (4) at non-singleton dimension 3"
+     ]
+    }
+   ],
+   "source": [
+    "k_1 * cos_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000,  1.0000,  1.0000,  1.0000],\n",
+       "        [ 0.9950,  0.5403, -0.8391,  0.8623],\n",
+       "        [ 0.9801, -0.4161,  0.4081,  0.4872],\n",
+       "        [ 0.9553, -0.9900,  0.1543, -0.0221],\n",
+       "        [ 0.9211, -0.6536, -0.6669, -0.5253],\n",
+       "        [ 0.8776,  0.2837,  0.9650, -0.8838]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 6, 2])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_1.squeeze(0).shape"
    ]
   }
  ],
